tinyc/test/bad/false-redeclare-variable.c
int main()
{
    int false = 3;
    return 0;
}
